[tool.poetry]
name = "transformers-examples"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorboard = "^2.3.0"
scikit-learn = "^0.23.2"
seqeval = "^0.0.12"
psutil = "^5.7.2"
sacrebleu = "^1.4.13"
rouge-score = "^0.0.4"
tensorflow_datasets = "^3.2.1"
pytorch-lightning = "0.8.5"
matplotlib = "^3.3.0"
git-python = "1.0.3"
streamlit = "^0.64.0"
elasticsearch = "^7.8.1"
pandas = "^1.1.0"
nlp = "^0.4.0"
fire = "^0.3.1"
faiss-gpu = "^1.6.3"
wikiextractor = "^0.1"
wandb = "^0.9.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
